FEAT: Add python version, add deamon version. Testing  On branch daemon-mode-add  Changes to be committed: 	modified:   scripts/grafana/Meshtastic_Repeater_Metrics.json 	modified:   scripts/grafana/meshmetrics_dash_prov.yml 	new file:   scripts/mesh_metrics.py 	new file:   scripts/mesh_metricsd 	new file:   scripts/mesh_metricsd.md

--- a/scripts/grafana/meshmetrics_dash_prov.yml
+++ b/scripts/grafana/meshmetrics_dash_prov.yml
@@ -4,6 +4,8 @@ providers:
   - name: Meshtastic
     folder: Meshtastic
     type: file
+    disableDeletion: false
+    editable: false
     updateIntervalSeconds: 300
     allowUiUpdates: false
     options:
