FEAT: Prometheus push config example

--- a/scripts/meshmetricsd.conf
+++ b/scripts/meshmetricsd.conf
@@ -45,6 +45,10 @@ format = node_exporter
 # Create individual files for each node (true) or single file (false)
 individual_files = false
 
+[prometheus]
+# Prometheus exposition push (optional URL)
+# push_url = http://192.168.1.6:8428/api/v1/import/prometheus
+
 [monitoring]
 # Enable daemon statistics collection
 enable_stats = true
